tests/ui/proc-macro/issue-79148.stderr
error[E0364]: `Variant` is only public within the crate, and cannot be re-exported outside
  --> $DIR/issue-79148.rs:9:1
   |
LL | cause_ice!();
   | ^^^^^^^^^^^^
   |
note: consider marking `Variant` as `pub` in the imported module
  --> $DIR/issue-79148.rs:9:1
   |
LL | cause_ice!();
   | ^^^^^^^^^^^^
   = note: this error originates in the macro `cause_ice` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0364`.
